--- a/bookflix.html
+++ b/bookflix.html
@@ -107,13 +107,13 @@
 
     <!-- Carousel -->
     <div class="carousel">
-      <img src="img/pic1.png" alt="BookFlix Screenshot 1" class="active">
-      <img src="img/pic2.png" alt="BookFlix Screenshot 2">
-      <img src="img/pic3.png" alt="BookFlix Screenshot 3">
-      <img src="img/pic4.png" alt="BookFlix Screenshot 4">
-      <img src="img/pic5.png" alt="BookFlix Screenshot 5">
-      <img src="img/pic6.png" alt="BookFlix Screenshot 6">
-      <img src="img/pic7.png" alt="BookFlix Screenshot 7">
+      <img src="pic1.png" alt="BookFlix Screenshot 1" class="active">
+      <img src="pic2.png" alt="BookFlix Screenshot 2">
+      <img src="pic3.png" alt="BookFlix Screenshot 3">
+      <img src="pic4.png" alt="BookFlix Screenshot 4">
+      <img src="pic5.png" alt="BookFlix Screenshot 5">
+      <img src="pic6.png" alt="BookFlix Screenshot 6">
+      <img src="pic7.png" alt="BookFlix Screenshot 7">
 
     </div>
 
