--- a/hexwin.html
+++ b/hexwin.html
@@ -107,13 +107,13 @@
 
     <!-- Carousel -->
     <div class="carousel">
-      <img src="img/h1.png" alt="HexWin Screenshot 1" class="active">
-      <img src="img/h2.png" alt="HexWin Screenshot 2">
-      <img src="img/h3.png" alt="HexWin Screenshot 3">
-      <img src="img/h4.png" alt="HexWin Screenshot 4">
-      <img src="img/h5.png" alt="HexWin Screenshot 5">
-      <img src="img/h6.png" alt="HexWin Screenshot 6">
-      <img src="img/h7.png" alt="HexWin Screenshot 7">
+      <img src="h1.png" alt="HexWin Screenshot 1" class="active">
+      <img src="h2.png" alt="HexWin Screenshot 2">
+      <img src="h3.png" alt="HexWin Screenshot 3">
+      <img src="h4.png" alt="HexWin Screenshot 4">
+      <img src="h5.png" alt="HexWin Screenshot 5">
+      <img src="h6.png" alt="HexWin Screenshot 6">
+      <img src="h7.png" alt="HexWin Screenshot 7">
       
     </div>
 
